<resources>
    <string name="app_name">MoDeS3 Dashboard</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_red_button">RedButtonActivity</string>
    <string name="title_activity_new_element">NewElementActivity</string>
    <string name="mqtt_settings">MQTT Settings</string>
    <string name="server">Server:</string>
    <string name="port">Port:</string>
    <string name="server_input_placeholder">server</string>
    <string name="port_input_placeholder">port</string>
    <string name="save_and_connect">Save and connect</string>
    <string name="subscriber_topic">Subscriber Topic:</string>
    <string name="topic_name">topic name</string>
    <string name="publisher_topic">Publisher Topic:</string>
    <string name="publisher_name">Publisher Name:</string>
    <string name="name">name</string>
    <string name="save">Save</string>
    <string name="MQTTServer">MQTTServer</string>
    <string name="MQTTPort">MQTTPort</string>
    <string name="MQTTSubTpoic">MQTTSubTpoic</string>
    <string name="MQTTPubTpoic">MQTTPubTpoic</string>
    <string name="MQTTPubName">MQTTPubName</string>
    <string name="snackbar_SaveServerSettings">Server settings saved</string>
    <string name="snackbar_SaveSettings">Settings saved</string>
    <string name="action">Action</string>
    <string name="new_train">New train</string>
    <string name="Name">Name</string>
    <string name="trainname">trainName</string>
    <string name="id">ID:</string>
    <string name="_0">0</string>
    <string name="segmentname">segmentName</string>
    <string name="new_turnout">New turnout</string>
    <string name="trains">Trains</string>
    <string name="sections">Sections</string>
    <string name="turnouts">Turnouts</string>
    <string name="emergency_shutdown">Emergency Shutdown</string>
    <string name="stop_all_trains">Stop all trains</string>
    <string name="stop_all_segments">Stop all segments</string>
    <string name="emergency_train_stop">Stop all trains</string>
    <string name="emergency_segment_stop">Stop all segments</string>
    <string name="logcat_MQTT_Connector">MQTTConnector</string>
    <string name="topic_data_set">Topic data set</string>
    <string name="connecting_to_mqtt">Connecting to MQTT server</string>
    <string name="stopping_all_trains">Stopping all trains</string>
    <string name="stopping_all_segments">Stopping all segments</string>
    <string name="all_segments_stopped">All segments stopped</string>
    <string name="all_trains_stopped">All trains stopped</string>
    <string name="topic_set">Topic set</string>
    <string name="connected">Connected</string>
</resources>
